Add environment variable support and refactor threads
Added support for handling OS environment variables, specifically for the chat application's username, server IP and port. Handled input from the environment variables and applied necessary error handling and input prompts if no environment variable exists.
Refactored several methods to use a new virtual thread executor instead of creating and managing threads directly. This is a more modern approach which makes code easier to read and maintain.
Improved UI with server information option pane for better interaction.
Over-all, these changes improve usability and robustness of the application.